--- a/login.html
+++ b/login.html
@@ -10,28 +10,27 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 
 <body>
 
-    <head>
-        <nav>
-            <li> <a href="index.html"></a></li>
-            <li> <a href="signup.html"></a></li>
-            <li> <a href="login.html"></a></li>
-            <li> <a href="products.html"></a></li>
-            <li><a href="checkout.html"></a></li>
+    <header class="begin">
+        <h1 class="bubble">Protein World Sweets & Treats</h1>
+    </header>
+
+    <nav class="next">
+        <li> <a href="index.html">Home</a></li>
+        <li> <a href="signup.html">signup</a></li>
+        <li> <a href="login.html">login</a></li>
+        <li> <a href="products.html">products</a></li>
+        <li><a href="checkout.html">checkout</a></li>
 
 
-        </nav>
-    </head>
-
+    </nav>
 
 
     <footer> </footer>
 
 </body>
-
-</html>
