created projects stucture and other starter code

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <img src="https://i.pinimg.com/736x/2a/2b/db/2a2bdb190def02ba155799ced883e883.jpg" alt="width= "300 height= "300 ">
         <img src="https://i.pinimg.com/originals/9c/c9/96/9cc9967c7f363d81b11a62ae4ad81940.jpg" alt="width=" 300 height="300">
         <img src="https://i.pinimg.com/736x/be/b0/d0/beb0d0db5f5efaa87b247dddfc11d806.jpg" alt="width= "300 height="300">
-
+        <img src="https://i.pinimg.com/originals/94/22/e7/9422e755a9aecc040816afd8ad10a105.jpg" alt="width= "300 height="300">
+        <img src="https://64.media.tumblr.com/4e0cb674be3946955ca3c0a503f8cdab/tumblr_p6xbo9j0xm1ve0e3oo1_1280.jpg" alt="width= "150 height="300">
     <footer> </footer>
 
 </body>
