created projects structure and other starter code

--- a/signup.html
+++ b/signup.html
@@ -115,10 +115,11 @@
                                                 <label class="form-label" for="phoneNumber">Phone Number</label>
                                             </div>
 
-
-
                                             <div class="mt-4 pt-2">
                                                 <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
+
+                                                </div> 
+                                    
                                             </div>
 
                                 </form>
