created projects structure and other started code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
         
-        <p> Did you know that even though your trying to switch up your eating habits you can still eat all your favoriate treats and sweets! You just have to add a little twist to it to make it more healthier. Dont Worry at Protein World Sweets & Treat we got you coverd!       </p>
+        <p> Eating snacks in a healthy way doesn't mean you have to give up on flavor and indulgence it's all about making smart choices. By incorporating protein and other nutritious ingredients into your snacks, you can satisfy your cravings while nourishing your body. Instead of reaching for the usual bag of chips, opt for a handful of mixed nuts or seeds. These snacks are packed with protein and healthy fats, providing a satisfying crunch and sustained energy. You can also pair them with a small serving of Greek yogurt or hummus for an added protein boost, creating a balanced and satisfying combination.  But dont worry cause Protein World Sweets & treats has you coverd!   </p>
         
         <img src="https://i.pinimg.com/736x/7f/11/2f/7f112f8a907a5021fcb545d2164f4c43.jpg" alt=" width= "300 height="300">
         <img src="https://i.pinimg.com/originals/fe/45/5e/fe455ec276b4c5bf72a4291b74a9e200.jpg " alt="width= "300 height= "300">
