--- a/checkout.html
+++ b/checkout.html
@@ -74,7 +74,7 @@
                 </li>
                 <li class="list-group-item d-flex justify-content-between">
                   <span>Total (USD)</span>
-                  <strong>$68.97</strong>
+                  <strong>$62.07</strong>
                 </li>
               </ul>
      
@@ -243,7 +243,7 @@
         </main>
      
         <footer class="my-5 pt-5 text-body-secondary text-center text-small">
-          <p class="mb-1">© 1997–2023 Ammo Supply</p>
+          <p class="mb-1">© 1998–2023 Protein Sweets & Treats</p>
           <ul class="list-inline">
             <li class="list-inline-item"><a href="#">Privacy</a></li>
             <li class="list-inline-item"><a href="#">Terms</a></li>
