created projects structure and other starter code

--- a/checkout.html
+++ b/checkout.html
@@ -250,5 +250,11 @@
             <li class="list-inline-item"><a href="#">Support</a></li>
           </ul>
         </footer>
+
+
+        <footer> 
+          
+          Contact us: Email:Proteinsweetandtreats@gmail.com Phone:(470)-342-1602
+        </footer>
       </div>
             </main> 
