--- a/index.html
+++ b/index.html
@@ -33,8 +33,16 @@
 
     </nav>
 
+        <p> Are you ready to eat the food you once loved with out increasing your waist line?</p> 
+        <p>Well your in the right palce then come on and get you one of our protein cookbooks </p> 
+        <p> Buy 2 or more cookbooks to recive 10% off your order with promocode : SNACK-ATTACK10</p> 
+        <p><Strong>THIS MONTHS2 FOR 1 BUNDLE DEALS </Strong></p>
+        <P> 1. DROP IT POP IT <Details> Includes: our 100 Calorie Snack Cookbook & Healthy High Protein Snack Recipes Cookbook </Details></P>
+        <P> 2. BODY HOTTIE <details> Includes: Our The Essential Guidde To Smoothie, Smoothie Bowls & Protein Shakes Cookbook  & Snack Power Cookbook</details>    </p>
+
+
         
-        <p> Eating snacks in a healthy way doesn't mean you have to give up on flavor and indulgence it's all about making smart choices. By incorporating protein and other nutritious ingredients into your snacks, you can satisfy your cravings while nourishing your body. Instead of reaching for the usual bag of chips, opt for a handful of mixed nuts or seeds. These snacks are packed with protein and healthy fats, providing a satisfying crunch and sustained energy. You can also pair them with a small serving of Greek yogurt or hummus for an added protein boost, creating a balanced and satisfying combination.  But dont worry cause Protein World Sweets & treats has you coverd!   </p>
+        <p> Eating snacks in a healthy way doesn't mean you have to give up on flavor and indulgence it's all about making smart choices. By incorporating protein and other nutritious ingredients into your snacks, you can satisfy your cravings while nourishing your body. Instead of reaching for the usual bag of chips, opt for a handful of mixed nuts or seeds. These snacks are packed with protein and healthy fats, providing a satisfying crunch and sustained energy. You can also pair them with a small serving of Greek yogurt or hummus for an added protein boost, creating a balanced and satisfying combination.  But dont worry cause Protein World Sweets & treats has you coverd! </p>
         
         <img src="https://i.pinimg.com/736x/7f/11/2f/7f112f8a907a5021fcb545d2164f4c43.jpg" alt=" width= "300 height="300">
         <img src="https://i.pinimg.com/originals/fe/45/5e/fe455ec276b4c5bf72a4291b74a9e200.jpg " alt="width= "300 height= "300">
@@ -49,10 +57,15 @@
         <img src="https://i.pinimg.com/originals/8a/5b/1f/8a5b1f63752ba8a648e7e76d83dc9aa7.jpg" alt="width" 300 height="300">
         <img src="https://i.pinimg.com/originals/d7/e7/db/d7e7dbcd28fd60e5fd7ee38281b5f448.jpg" alt="width" 300 height="300">
         <img src="https://i.pinimg.com/736x/7e/c0/fc/7ec0fc3f9965282b3722d5f37a87fce2.jpg" alt="width" 300 height="300">
-        <img src="https://64.media.tumblr.com/16f0ea85c84cb8852f3ebf8bc72128ec/tumblr_pdjdl4mW5t1xr05wqo1_500.png" alt="width" 300 height="300"
+        <img src="https://64.media.tumblr.com/16f0ea85c84cb8852f3ebf8bc72128ec/tumblr_pdjdl4mW5t1xr05wqo1_500.png" alt="width" 300 height="300">
+
+
  
 
-    <footer></footer>
+            <footer> 
+
+           Contact us: Email:Proteinsweetandtreats@gmail.com Phone:(470)-342-1602
+            </footer>
 
 </body>
 
