--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
   <div class="card mb-3">
     <div class="row g-0 d-flex align-items-center">
       <div class="col-lg-4 d-none d-lg-flex">
-        <img src="https://th.bing.com/th/id/R.651f7e12a4a4874adc131728cd1b6f2f?rik=v8Q1oK6OtAgynA&riu=http%3a%2f%2ffrugivoremag.com%2fwp-content%2fuploads%2f2012%2f05%2ftumblr_m3o5pdyGDK1r14zsjo1_500.jpeg&ehk=sPTg5rdMomoFyF%2b90YqVjB3pzNBGsLU4tqYZgxbK4AI%3d&risl=&pid=ImgRaw&r=0"Trendy Pants and Shoes"
+        <img src="https://th.bing.com/th/id/R.651f7e12a4a4874adc131728cd1b6f2f?rik=v8Q1oK6OtAgynA&riu=http%3a%2f%2ffrugivoremag.com%2fwp-content%2fuploads%2f2012%2f05%2ftumblr_m3o5pdyGDK1r14zsjo1_500.jpeg&ehk=sPTg5rdMomoFyF%2b90YqVjB3pzNBGsLU4tqYZgxbK4AI%3d&risl=&pid=ImgRaw&r=0"Trendy picture 
           class="w-100 rounded-t-5 rounded-tr-lg-0 rounded-bl-lg-5" />
       </div>
       <div class="col-lg-8">
@@ -109,6 +109,9 @@
     
 
 
-    <footer> </footer>
+    <footer>
+      
+      Contact us: Email:Proteinsweetandtreats@gmail.com Phone:(470)-342-1602
+       </footer>
 
 </body>
