--- a/products.html
+++ b/products.html
@@ -186,7 +186,10 @@
 
 
 
-    <footer> </footer>
+    <footer> 
+        
+        Contact us: Email:Proteinsweetandtreats@gmail.com Phone:(470)-342-1602
+    </footer>
 
 </body>
 
